# ADS-Scenario-Transformer

./: .gitignore  .replit  BorregasAve-lanelet2.osm  BorregasAve-vmb.osm  Geometry.py  LICENSE  README.md  definitions.py  main.py  odr_to_lanelet2.py  original-BorregasAve.osm  original-BorregasAve.xodr  osm_to_lanelet2.py  osm_to_xodr.py  pyproject.toml  replit.nix  sce.yaml  testGeometry.py
ads_scenario_transformer/: __main__.py
apollo_msgs/: __init__.py  compile_proto.sh  modify_proto_imports.sh  pyproject.toml
apollo_msgs/basic_msgs/: __init__.py  direction_pb2.py  drive_event.proto  drive_event_pb2.py  drive_state_pb2.py  error_code_pb2.py  geometry_pb2.py  header.proto  header_pb2.py  pnc_point_pb2.py  vehicle_id_pb2.py  vehicle_signal_pb2.py
apollo_msgs/generated_common_msgs/: __init__.py
apollo_msgs/generated_common_msgs/modules/: __init__.py
apollo_msgs/localization_msgs/: gps.proto  gps_pb2.py  imu.proto  imu_pb2.py  localization.proto  localization_pb2.py  localization_status_pb2.py  pose.proto  pose_pb2.py
apollo_msgs/map_msgs/: __init__.py  map.proto  map_clear_area.proto  map_clear_area_pb2.py  map_crosswalk.proto  map_crosswalk_pb2.py  map_geometry.proto  map_geometry_pb2.py  map_id_pb2.py  map_junction.proto  map_junction_pb2.py  map_lane.proto  map_lane_pb2.py  map_overlap.proto  map_overlap_pb2.py  map_parking_space.proto  map_parking_space_pb2.py  map_pb2.py  map_pnc_junction.proto  map_pnc_junction_pb2.py  map_road.proto  map_road_pb2.py  map_rsu.proto  map_rsu_pb2.py  map_signal.proto  map_signal_pb2.py  map_speed_bump.proto  map_speed_bump_pb2.py  map_speed_control.proto  map_speed_control_pb2.py  map_stop_sign.proto  map_stop_sign_pb2.py  map_yield_sign.proto  map_yield_sign_pb2.py
apollo_msgs/perception_msgs/: __init__.py  perception_camera.proto  perception_camera_pb2.py  perception_lane.proto  perception_lane_pb2.py  perception_obstacle.proto  perception_obstacle_pb2.py  traffic_light_detection.proto  traffic_light_detection_pb2.py
apollo_msgs/routing_msgs/: __init__.py  poi.proto  poi_pb2.py  routing.proto  routing_pb2.py
cyber_record_reader/: pyproject.toml
cyber_record_reader/apollo_borregas/json/: 00000009.00000_routing_response.json  00000009.00000_routing_response_history.json
cyber_record_reader/apollo_borregas/txt/: 00000009.00000_monitor.txt  00000009.00000_obstacles.txt  00000009.00000_traffic_light.txt
cyber_record_reader/apollo_borregas/yaml/: 00000009.00000_perception_obstacles.yaml  00000009.00000_routing_request.yaml  00000009.00000_routing_response.yaml  00000009.00000_routing_response_history.yaml
cyber_record_reader/src/: CyberRecordReader.py  main.py
metamodels/: .project
(+435 files in other folders)
