[tool.poetry]
name = "sce-trans"
version = "0.1.0"
description = ""
authors = ["Changnam"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
protobuf = "^4.25.0"
pyproj = "^3.6.1"
pyecore = "^0.14.0"
pyecoregen = "^0.5.1"
plantuml = "^0.3.0"
lanelet2 = "^1.2.1"
pyyaml = "^6.0.1"
protobuf3-to-dict = "^0.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
