[tool.poetry]
name = "ADS-Scenario-Transformer"
version = "0.1.0"
description = ""
authors = ["Changnam"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyproj = "^3.6.1"
pyyaml = "^6.0.1"
protobuf3-to-dict = "^0.1.5"
shapely = "^2.0.2"
networkx = "^3.2.1"
protobuf = "3.19.4"
cyber-record = "^0.1.12"
lanelet2 = [
    { platform = "linux", path = "pkgs/lanelet2-1.2.1-cp310-cp310-manylinux_2_31_x86_64.whl"}
]
openscenario-msgs = {path = "openscenario_msgs"}
docker = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
